--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@ asciidoc.install();
 <div id="content">
 <div class="sect2">
 <h3 id="_introduction">Introduction</h3>
-<div class="paragraph"><p>Hello and welcome to my personal site hosted on <a href="http://pages.github.com">GitHub pages</a>. My name is Chris White and I work as a software engineer at <a href="http://www.engineyard.com">EngineYard</a>. I utilize a number of tools to get the job done, including <a href="http://www.perl.org">Perl</a>, <a href="http://www.python.org">Python</a>, and <a href="http://www.ruby-lang.org">Ruby</a>. Recently I started to look into <a href="http://www.erlang.org">Erlang</a> for API services. When I&#8217;m not programming I study Japanese, and hope to live and work there someday. Main main open source project I work with is <a href="https://rvm.io">RVM</a>. Here&#8217;s where you can find me:</p></div>
+<div class="paragraph"><p>Hello and welcome to my personal site hosted on <a href="http://pages.github.com">GitHub pages</a>. My name is Chris White and I work as a software engineer at <a href="http://www.engineyard.com">EngineYard</a>. I utilize a number of tools to get the job done, including <a href="http://www.perl.org">Perl</a>, <a href="http://www.python.org">Python</a>, and <a href="http://www.ruby-lang.org">Ruby</a>. Recently I started to look into <a href="http://www.erlang.org">Erlang</a> for API services. When I&#8217;m not programming I study Japanese, and hope to live and work there someday. My main open source project I work with is <a href="https://rvm.io">RVM</a>. Here&#8217;s where you can find me:</p></div>
 <div class="ulist"><ul>
 <li>
 <p>
@@ -744,7 +744,7 @@ Email: cwprogram - live - com
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-02-13 15:00:13 PST
+Last updated 2013-02-13 15:34:43 PST
 </div>
 </div>
 </body>
