Adding link to home page just in case (even though there's only one article)

--- a/security/talk-on-security-process.html
+++ b/security/talk-on-security-process.html
@@ -714,6 +714,11 @@ asciidoc.install();
 <br /><span id="revremark">48:34 PST 2013</span>
 </div>
 <div id="content">
+<div id="preamble">
+<div class="sectionbody">
+<div class="paragraph"><p><a href="/">Home</a></p></div>
+</div>
+</div>
 <div class="sect2">
 <h3 id="_disclaimer">Disclaimer</h3>
 <div class="paragraph"><p>I work for EngineYard, a company that&#8217;s primary target is Rails hosting. Putting Rails in a good light is in the interest of the company I work for, so there might be understandable suspicion of bias. I hope that you, the reader, will read everything and make a critical judgement based on the facts I will present. The reason why I&#8217;m using Rails as a topic of discussion is how recent it is, and the fact that misconceptions have the chance to give people a false sense of security.</p></div>
@@ -802,7 +807,7 @@ Even with all this in place you can still get exploited. If this happens, be as 
 <div id="footer">
 <div id="footer-text">
 Version 1.0<br />
-Last updated 2013-02-13 19:06:05 PST
+Last updated 2013-02-13 19:10:43 PST
 </div>
 </div>
 </body>
