Added link to the secure workstation article to homepage

--- a/index.html
+++ b/index.html
@@ -906,14 +906,18 @@ Email: cwprogram - live - com
 <a href="/security/talk-on-security-process.html">A Talk On Security Process</a>
 </p>
 </li>
+<li>
+<p>
+<a href="/security/secure-workstation.html">The Secure Workstation</a>
+</p>
+</li>
 </ul></div>
-<div class="paragraph"><p>In progress!</p></div>
 </div>
 </div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-02-19 06:11:01 PST
+Last updated 2013-02-21 22:40:43 PST
 </div>
 </div>
 </body>
