Add badges at the bottom + CC license

--- a/git/git-rebase-fixing.html
+++ b/git/git-rebase-fixing.html
@@ -1011,7 +1011,7 @@ commit 39d46f9659fd846257b3f70cab8e9900e2d7accd
 <div class="admonitionblock">
 <table><tr>
 <td class="icon">
-<div class="title">Note</div>
+<img src="./images/icons/note.png" alt="Note" />
 </td>
 <td class="content">As the remote server will question your edits, <code>--force</code> <strong>must</strong> be used</td>
 </tr></table>
@@ -1030,7 +1030,7 @@ commit 39d46f9659fd846257b3f70cab8e9900e2d7accd
 <div class="admonitionblock">
 <table><tr>
 <td class="icon">
-<div class="title">Warning</div>
+<img src="./images/icons/warning.png" alt="Warning" />
 </td>
 <td class="content">Do <strong>NOT</strong> do this when it&#8217;s a remote repository where other people are actively committing/cloning! I would not do this to the main RVM repository!</td>
 </tr></table>
@@ -1042,6 +1042,21 @@ commit 39d46f9659fd846257b3f70cab8e9900e2d7accd
 <div id="footer-text">
 Version 1.0<br />
 Last updated 2013-02-20 04:35:01 PST
+</div>
+<div id="footer-badges">
+<a href="http://validator.w3.org/check?uri=referer">
+  <img style="border:0;width:88px;height:31px"
+    src="http://www.w3.org/Icons/valid-xhtml11-blue"
+    alt="Valid XHTML 1.1" height="31" width="88" />
+</a>
+<a href="http://jigsaw.w3.org/css-validator/">
+  <img style="border:0;width:88px;height:31px"
+    src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+    alt="Valid CSS!" />
+</a>
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/us/">
+  <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/us/88x31.png" />
+</a>
 </div>
 </div>
 </body>
