--- a/security/secure-workstation.html
+++ b/security/secure-workstation.html
@@ -1126,6 +1126,21 @@ Look into a CampFire desktop solution, with the web version currently being a su
 Version 1.0<br />
 Last updated 2013-02-19 17:25:29 PST
 </div>
+<div id="footer-badges">
+<a href="http://validator.w3.org/check?uri=referer">
+  <img style="border:0;width:88px;height:31px"
+    src="http://www.w3.org/Icons/valid-xhtml11-blue"
+    alt="Valid XHTML 1.1" height="31" width="88" />
+</a>
+<a href="http://jigsaw.w3.org/css-validator/">
+  <img style="border:0;width:88px;height:31px"
+    src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+    alt="Valid CSS!" />
+</a>
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/us/">
+  <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/us/88x31.png" />
+</a>
+</div>
 </div>
 </body>
 </html>
