Adding git push --force article to index page

--- a/index.html
+++ b/index.html
@@ -911,13 +911,18 @@ Email: cwprogram - live - com
 <a href="/security/secure-workstation.html">The Secure Workstation</a>
 </p>
 </li>
+<li>
+<p>
+<a href="/git/git-force.html">On git push --force</a>
+</p>
+</li>
 </ul></div>
 </div>
 </div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-02-21 22:40:43 PST
+Last updated 2013-02-26 20:49:15 PST
 </div>
 <div id="footer-badges">
 <a href="http://validator.w3.org/check?uri=referer">
