Added the git rebase article to the index listing

--- a/index.html
+++ b/index.html
@@ -916,13 +916,18 @@ Email: cwprogram - live - com
 <a href="/git/git-force.html">On git push --force</a>
 </p>
 </li>
+<li>
+<p>
+<a href="/git/git-rebase-fixing.html">Git Rebase Fixing</a>
+</p>
+</li>
 </ul></div>
 </div>
 </div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-02-26 20:49:15 PST
+Last updated 2013-02-28 05:49:24 PST
 </div>
 <div id="footer-badges">
 <a href="http://validator.w3.org/check?uri=referer">
