Add some categories to the index page

--- a/index.html
+++ b/index.html
@@ -900,6 +900,8 @@ Email: cwprogram - live - com
 </div>
 <div class="sect2">
 <h3 id="_articles">Articles</h3>
+<div class="sect3">
+<h4 id="_security">Security</h4>
 <div class="ulist"><ul>
 <li>
 <p>
@@ -911,6 +913,11 @@ Email: cwprogram - live - com
 <a href="/security/secure-workstation.html">The Secure Workstation</a>
 </p>
 </li>
+</ul></div>
+</div>
+<div class="sect3">
+<h4 id="_git">Git</h4>
+<div class="ulist"><ul>
 <li>
 <p>
 <a href="/git/git-force.html">On git push --force</a>
@@ -923,11 +930,22 @@ Email: cwprogram - live - com
 </li>
 </ul></div>
 </div>
+<div class="sect3">
+<h4 id="_python">Python</h4>
+<div class="ulist"><ul>
+<li>
+<p>
+<a href="/python/class-methods-and-self.html">Python Class Methods and self</a>
+</p>
+</li>
+</ul></div>
+</div>
+</div>
 </div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-02-28 05:49:24 PST
+Last updated 2013-03-03 21:03:42 PST
 </div>
 <div id="footer-badges">
 <a href="http://validator.w3.org/check?uri=referer">
