Refresh html pages from updates to the asciidoc template. This cleans up much of the div mess on elements that are already block level elements.

--- a/index.html
+++ b/index.html
@@ -874,78 +874,60 @@ asciidoc.install();
 <div id="content">
 <div class="sect2">
 <h3 id="_introduction">Introduction</h3>
-<div class="paragraph"><p>Hello and welcome to my personal site hosted on <a href="http://pages.github.com">GitHub pages</a>. My name is Chris White and I work as a software engineer at <a href="http://www.engineyard.com">EngineYard</a>. I utilize a number of tools to get the job done, including <a href="http://www.perl.org">Perl</a>, <a href="http://www.python.org">Python</a>, and <a href="http://www.ruby-lang.org">Ruby</a>. Recently I started to look into <a href="http://www.erlang.org">Erlang</a> for API services. When I&#8217;m not programming I study Japanese, and hope to live and work there someday. My main open source project I work with is <a href="https://rvm.io">RVM</a>. Here&#8217;s where you can find me:</p></div>
-<div class="ulist"><ul>
+<p class="paragraph">Hello and welcome to my personal site hosted on <a href="http://pages.github.com">GitHub pages</a>. My name is Chris White and I work as a software engineer at <a href="http://www.engineyard.com">EngineYard</a>. I utilize a number of tools to get the job done, including <a href="http://www.perl.org">Perl</a>, <a href="http://www.python.org">Python</a>, and <a href="http://www.ruby-lang.org">Ruby</a>. Recently I started to look into <a href="http://www.erlang.org">Erlang</a> for API services. When I&#8217;m not programming I study Japanese, and hope to live and work there someday. My main open source project I work with is <a href="https://rvm.io">RVM</a>. Here&#8217;s where you can find me:</p>
+<ul class="ulist">
 <li>
-<p>
 <a href="https://github.com/cwgem">GitHub</a>
-</p>
 </li>
 <li>
-<p>
 <a href="https://www.twitter.com/cwgem">Twitter</a>
-</p>
 </li>
 <li>
-<p>
 <a href="http://www.linkedin.com/pub/chris-white/1/760/884/">LinkedIn</a>
-</p>
 </li>
 <li>
-<p>
 Email: cwprogram - live - com
-</p>
 </li>
-</ul></div>
+</ul>
 </div>
 <div class="sect2">
 <h3 id="_articles">Articles</h3>
 <div class="sect3">
 <h4 id="_security">Security</h4>
-<div class="ulist"><ul>
+<ul class="ulist">
 <li>
-<p>
 <a href="/security/talk-on-security-process.html">A Talk On Security Process</a>
-</p>
 </li>
 <li>
-<p>
 <a href="/security/secure-workstation.html">The Secure Workstation</a>
-</p>
 </li>
-</ul></div>
+</ul>
 </div>
 <div class="sect3">
 <h4 id="_git">Git</h4>
-<div class="ulist"><ul>
+<ul class="ulist">
 <li>
-<p>
 <a href="/git/git-force.html">On git push --force</a>
-</p>
 </li>
 <li>
-<p>
 <a href="/git/git-rebase-fixing.html">Git Rebase Fixing</a>
-</p>
 </li>
-</ul></div>
+</ul>
 </div>
 <div class="sect3">
 <h4 id="_python">Python</h4>
-<div class="ulist"><ul>
+<ul class="ulist">
 <li>
-<p>
 <a href="/python/class-methods-and-self.html">Python Class Methods and self</a>
-</p>
 </li>
-</ul></div>
+</ul>
 </div>
 </div>
 </div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-03-03 21:03:42 PST
+Last updated 2013-03-16 13:04:55 PDT
 </div>
 <div id="footer-badges">
 <a href="http://validator.w3.org/check?uri=referer">
