Adding Racism and Sexism article to the index page

--- a/index.html
+++ b/index.html
@@ -922,12 +922,20 @@ Email: cwprogram - live - com
 </li>
 </ul>
 </div>
+<div class="sect3">
+<h4 id="_society">Society</h4>
+<ul class="ulist">
+<li>
+<a href="/society/racism-and-sexism.html">Racism and Sexism</a>
+</li>
+</ul>
+</div>
 </div>
 </div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-03-16 13:04:55 PDT
+Last updated 2013-03-16 16:50:29 PDT
 </div>
 <div id="footer-badges">
 <a href="http://validator.w3.org/check?uri=referer">
