--- a/society/racism-and-sexism.html
+++ b/society/racism-and-sexism.html
@@ -84,8 +84,7 @@ p {
 ul, ol, li > p {
   margin-top: 0;
 }
-ul > li     { color: #aaa; }
-ul > li > * { color: black; }
+ul > li     { color: #3E4349; }
 
 pre {
   padding: 0;
