Added balanced security article to index listing

--- a/index.html
+++ b/index.html
@@ -900,6 +900,9 @@ Email: cwprogram - live - com
 <li>
 <a href="/security/secure-workstation.html">The Secure Workstation</a>
 </li>
+<li>
+<a href="/security/balanced-security.html">Balanaced Security</a>
+</li>
 </ul>
 </div>
 <div class="sect3">
@@ -934,7 +937,7 @@ Email: cwprogram - live - com
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-03-16 16:50:29 PDT
+Last updated 2013-03-17 14:43:30 PDT
 </div>
 <div id="footer-badges">
 <a href="http://validator.w3.org/check?uri=referer">
