Switching to more specific header level format to deal with navigation accessibility issues

--- a/index.html
+++ b/index.html
@@ -871,8 +871,9 @@ asciidoc.install();
 <h1>The Personal Site of Chris White (cwgem)</h1>
 </div>
 <div id="content">
-<div class="sect2">
-<h3 id="_introduction">Introduction</h3>
+<div class="sect1">
+<h2 id="_introduction">Introduction</h2>
+<div class="sectionbody">
 <p class="paragraph">Hello and welcome to my personal site hosted on <a href="http://pages.github.com">GitHub pages</a>. My name is Chris White and I work as a software engineer at <a href="http://www.engineyard.com">EngineYard</a>. I utilize a number of tools to get the job done, including <a href="http://www.perl.org">Perl</a>, <a href="http://www.python.org">Python</a>, and <a href="http://www.ruby-lang.org">Ruby</a>. Recently I started to look into <a href="http://www.erlang.org">Erlang</a> for API services. When I&#8217;m not programming I study Japanese, and hope to live and work there someday. My main open source project I work with is <a href="https://rvm.io">RVM</a>. Here&#8217;s where you can find me:</p>
 <ul class="ulist">
 <li>
@@ -889,10 +890,12 @@ Email: cwprogram - live - com
 </li>
 </ul>
 </div>
+</div>
+<div class="sect1">
+<h2 id="_articles">Articles</h2>
+<div class="sectionbody">
 <div class="sect2">
-<h3 id="_articles">Articles</h3>
-<div class="sect3">
-<h4 id="_security">Security</h4>
+<h3 id="_security">Security</h3>
 <ul class="ulist">
 <li>
 <a href="/security/talk-on-security-process.html">A Talk On Security Process</a>
@@ -905,8 +908,8 @@ Email: cwprogram - live - com
 </li>
 </ul>
 </div>
-<div class="sect3">
-<h4 id="_git">Git</h4>
+<div class="sect2">
+<h3 id="_git">Git</h3>
 <ul class="ulist">
 <li>
 <a href="/git/git-force.html">On git push --force</a>
@@ -916,16 +919,16 @@ Email: cwprogram - live - com
 </li>
 </ul>
 </div>
-<div class="sect3">
-<h4 id="_python">Python</h4>
+<div class="sect2">
+<h3 id="_python">Python</h3>
 <ul class="ulist">
 <li>
 <a href="/python/class-methods-and-self.html">Python Class Methods and self</a>
 </li>
 </ul>
 </div>
-<div class="sect3">
-<h4 id="_society">Society</h4>
+<div class="sect2">
+<h3 id="_society">Society</h3>
 <ul class="ulist">
 <li>
 <a href="/society/racism-and-sexism.html">Racism and Sexism</a>
@@ -934,10 +937,11 @@ Email: cwprogram - live - com
 </div>
 </div>
 </div>
+</div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-03-17 14:43:30 PDT
+Last updated 2013-03-21 22:47:39 PDT
 </div>
 <div id="footer-badges">
 <a href="http://validator.w3.org/check?uri=referer">
