Adding Google Reader article to index listing

--- a/index.html
+++ b/index.html
@@ -933,6 +933,9 @@ Email: cwprogram - live - com
 <li>
 <a href="/society/racism-and-sexism.html">Racism and Sexism</a>
 </li>
+<li>
+<a href="/society/google-readers-bigger-problem.html">Google Reader&#8217;s Bigger Problem</a>
+</li>
 </ul>
 </div>
 </div>
@@ -941,7 +944,7 @@ Email: cwprogram - live - com
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-03-21 22:47:39 PDT
+Last updated 2013-03-22 09:29:30 PDT
 </div>
 <div id="footer-badges">
 <a href="http://validator.w3.org/check?uri=referer">
