Fixing home link and missing author information for git rebase article

--- a/git/git-rebase-fixing.html
+++ b/git/git-rebase-fixing.html
@@ -16,6 +16,7 @@
 <div id="wrapper">
 <div id="header">
 <h1>Git Rebase Fixing</h1>
+<p class="postinfo">Posted by <a href="mailto:&lt;cwhite@engineyard.com&gt;">Chris White</a> on Tue Feb 19 PST 2013</p>
 </div>
 <div id="menu">
 <ul>
@@ -27,7 +28,6 @@
 <div id="content">
 <div id="preamble">
 <div class="sectionbody">
-<p class="paragraph"><a href="/">Home</a></p>
 <div class="admonitionblock">
 <table><tr>
 <td class="icon">
@@ -185,8 +185,7 @@ commit 39d46f9659fd846257b3f70cab8e9900e2d7accd
 </div>
 <div id="footer">
 <p id="footer-text">
-Version 1.0<br />
-Last updated 2013-03-21 22:50:12 PDT
+Last updated 2013-03-24 18:35:49 PDT
 </p>
 <div id="footer-badges">
 <a href="http://validator.w3.org/check?uri=referer">
