Giving articles a header so the heading levels work properly

--- a/articles.html
+++ b/articles.html
@@ -25,11 +25,8 @@
 </ul>
 </div>
 <div id="content">
-<div id="preamble">
-<div class="sectionbody">
+<h2 id="_introduction" class="sect1">Introduction</h2>
 <p class="paragraph">These are a list of articles I&#8217;ve written on various topics. They are generated with AsciiDoc and edited with Emacs using adoc-mode.</p>
-</div>
-</div>
 <h3 id="_security" class="sect2">Security</h3>
 <ul class="ulist">
 <li>
@@ -69,7 +66,7 @@
 </div>
 <div id="footer">
 <p id="footer-text">
-Last updated 2013-03-24 17:55:42 PDT
+Last updated 2013-03-24 21:16:02 PDT
 </p>
 <div id="footer-badges">
 <a href="http://validator.w3.org/check?uri=referer">
