Fixing author info and stray Home link

--- a/security/talk-on-security-process.html
+++ b/security/talk-on-security-process.html
@@ -16,6 +16,7 @@
 <div id="wrapper">
 <div id="header">
 <h1>A Talk On Security Process</h1>
+<p class="postinfo">Posted by <a href="mailto:&lt;cwprogram@live.com&gt;">Chris White</a> on Wed Feb 13 18:48:34 PST 2013</p>
 </div>
 <div id="menu">
 <ul>
@@ -25,11 +26,6 @@
 </ul>
 </div>
 <div id="content">
-<div id="preamble">
-<div class="sectionbody">
-<p class="paragraph"><a href="/">Home</a></p>
-</div>
-</div>
 <h2 id="_disclaimer" class="sect1">Disclaimer</h2>
 <p class="paragraph">I work for EngineYard, a company that&#8217;s primary target is Rails hosting. Putting Rails in a good light is in the interest of the company I work for, so there might be understandable suspicion of bias. I hope that you, the reader, will read everything and make a critical judgement based on the facts I will present. The reason why I&#8217;m using Rails as a topic of discussion is how recent it is, and the fact that misconceptions have the chance to give people a false sense of security.</p>
 <h2 id="_what_8217_s_up_with_these_rails_vulns" class="sect1">What&#8217;s Up With These Rails Vulns?</h2>
@@ -82,8 +78,7 @@ Even with all this in place you can still get exploited. If this happens, be as 
 </div>
 <div id="footer">
 <p id="footer-text">
-Version 1.0<br />
-Last updated 2013-03-21 22:54:43 PDT
+Last updated 2013-03-24 21:12:44 PDT
 </p>
 <div id="footer-badges">
 <a href="http://validator.w3.org/check?uri=referer">
