--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 <div id="menu">
 <ul>
   <li><a href="/">Home</a></li>
-  <li>|</li>
-  <li><a href="/articles.html">Articles</a></li>
+  <li class="last"><a href="/articles.html">Articles</a></li>
 </ul>
 </div>
 <div id="content">
