Updated articles list with the revenge and fear market article

--- a/articles.html
+++ b/articles.html
@@ -64,11 +64,14 @@
 <li>
 <a href="/society/google-readers-bigger-problem.html">Google Reader&#8217;s Bigger Problem</a>
 </li>
+<li>
+<a href="/society/society/revenge-and-the-fear-marketplace.html">Revenge and The Fear Marketplace</a>
+</li>
 </ul>
 </div>
 <div id="footer">
 <p id="footer-text">
-Last updated 2013-03-24 21:16:02 PDT
+Last updated 2013-04-19 18:14:34 PDT
 </p>
 <div id="footer-badges">
 <a href="http://validator.w3.org/check?uri=referer">
